# rheoken

./: .env.example  .gitignore  CONTRIBUTION.md  LICENSE  README.md  pyproject.toml
registries/: tokens.json
registries/artifacts/: metadata.json
registries/protocols/: aave_v3.json  fluid_v1.json  uniswap_v2.json  uniswap_v3.json
registries/sources/: chains.json  contracts.json  deductions.json  labels.json  taxonomies.json
src/: build_tokens.py  fetch_metadata.py  validate.py
src/protocols/: aave_v3.py  fluid_v1.py  uniswap_v2.py  uniswap_v3.py
src/rpcs/: alchemy.py  base.py  drpc.py
tests/: test_aave_adapter.py  test_build_tokens.py  test_fluid_v1_adapter.py  test_metadata_update.py  test_registry_files.py  test_rpcs_base.py  test_token_adapter.py  test_uniswap_v2_adapter.py  test_uniswap_v3_adapter.py  test_validate.py
